# HD_workspace

./: README.md  waypoint.m
Vision/: Makefile  Template_tut.cpp  elements.h  pnlcreation.cpp  tomas_tut  tomas_tut.cpp  tut_ch1  tut_ch1.cpp  tut_ch2  tut_ch2.cpp  tut_ch3  tut_ch3.cpp  tut_ch4  tut_ch4.cpp
Vision/AR_tag_generator/: Makefile  marker_creation.cpp  readme.txt
Vision/one_cam_depth/: Makefile  main.cpp  polyfit_generator.cpp  readme.txt  results.txt
Vision/webcam_calibration/: Makefile  calibration.cpp  readme.txt
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/controller_motors/: WheelVelocity.h
devel/include/hd_controller_motors/: HandlingControl.h
devel/include/xplore_msg/: HandlingControl.h
devel/lib/controller_motors/: controller_motors
devel/lib/hd_controller_motors/: driver_main  hd_motors_driver  hd_node  incremental_position_generator  incremental_step_position_generator  manual_increment_position_generator  manual_position_generator  position_generator
devel/lib/hd_ik_cmd/: move_group_cmd
devel/lib/hd_ik_demo/: move_group_hd
devel/lib/hd_mp/: ik_demo
devel/lib/pkgconfig/: HD15.pc  HD15_IK.pc  controller_motors.pc  hd_controller_motors.pc  hd_ik_cmd.pc  hd_ik_demo.pc  hd_mp.pc  video_stream_opencv.pc  xplore_msg.pc
devel/lib/python2.7/dist-packages/controller_motors/msg/: _WheelVelocity.py  __init__.py
devel/lib/python2.7/dist-packages/hd_controller_motors/msg/: _HandlingControl.py  __init__.py
devel/lib/python2.7/dist-packages/xplore_msg/msg/: _HandlingControl.py
devel/share/HD15/cmake/: HD15Config.cmake
devel/share/HD15_IK/cmake/: HD15_IKConfig.cmake
devel/share/common-lisp/ros/controller_motors/msg/: WheelVelocity.lisp  _package.lisp  _package_WheelVelocity.lisp  controller_motors-msg.asd
devel/share/common-lisp/ros/hd_controller_motors/msg/: HandlingControl.lisp  _package.lisp  _package_HandlingControl.lisp  (+1 more)
devel/share/controller_motors/cmake/: controller_motors-msg-extras.cmake  controller_motors-msg-paths.cmake  controller_motorsConfig.cmake
devel/share/hd_controller_motors/cmake/: hd_controller_motors-msg-extras.cmake  hd_controller_motors-msg-paths.cmake  hd_controller_motorsConfig.cmake
devel/share/hd_ik_cmd/cmake/: hd_ik_cmdConfig.cmake
devel/share/hd_ik_demo/cmake/: hd_ik_demoConfig.cmake
devel/share/hd_mp/cmake/: hd_mpConfig.cmake
devel/share/roseus/ros/controller_motors/: manifest.l
devel/share/roseus/ros/hd_controller_motors/: manifest.l
devel/share/roseus/ros/xplore_msg/: manifest.l
devel/share/video_stream_opencv/cmake/: video_stream_opencvConfig.cmake
devel/share/xplore_msg/cmake/: xplore_msg-msg-extras.cmake  xplore_msg-msg-paths.cmake  xplore_msgConfig.cmake
src/Inverse_kinematics_robotic_arm/: README.md
src/Inverse_kinematics_robotic_arm/testarm/HD15/: CMakeLists.txt  arm1.urdf.xacro  package.xml
src/Inverse_kinematics_robotic_arm/testarm/HD15/config/: joint_names_HD15.yaml
src/Inverse_kinematics_robotic_arm/testarm/HD15/launch/: display.launch  gazebo.launch
src/Inverse_kinematics_robotic_arm/testarm/HD15/meshes/: Link_B.STL  Link_W1.STL  Link_W2.STL
src/Inverse_kinematics_robotic_arm/testarm/HD15/urdf/: HD15.csv  HD15.urdf  HD16.slx.autosave  HD16.urdf  HD161.slx.autosave  Link_L.STL  Link_U.STL  base_link.STL  scenario.mat  untitled.mat
src/Inverse_kinematics_robotic_arm/testarm/HD15_IK/: CMakeLists.txt
src/Inverse_kinematics_robotic_arm/testarm/HD15_IK/config/: HD15.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/Inverse_kinematics_robotic_arm/testarm/HD15_IK/launch/: HD15_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/Inverse_kinematics_robotic_arm/testarm/hd_ik_cmd/: CMakeLists.txt
src/Inverse_kinematics_robotic_arm/testarm/hd_ik_cmd/src/: move_group_cmd.cpp
src/Inverse_kinematics_robotic_arm/testarm/hd_ik_demo/: CMakeLists.txt
src/Inverse_kinematics_robotic_arm/testarm/hd_ik_demo/src/: move_group_hd.cpp
src/Inverse_kinematics_robotic_arm/testarm/hd_mp/: CMakeLists.txt
src/Inverse_kinematics_robotic_arm/testarm/hd_mp/launch/: ik_demo.launch
src/Inverse_kinematics_robotic_arm/testarm/hd_mp/src/: ik_demo.cpp
src/controller_motors/: CMakeLists.txt  package.xml
src/controller_motors/include/ethercatcpp/: ethercat_unit_device.h
src/controller_motors/include/xcontrol/: epos4_extended.h  three_axis_slot.h
src/controller_motors/include/xcontrol_base/: arm_motor.h  nav_motor.h  network_master.h
src/controller_motors/src/: driver_main.cpp  incremental_position_generator.cpp  incremental_step_position_generator.cpp  manual_increment_position_generator.cpp  manual_position_generator.cpp  position_generator.cpp  second_driver_main.cpp
src/hd_controller_motors/: CMakeLists.txt  package.xml
src/hd_controller_motors/include/ethercatcpp/: epos4.h  ethercat_unit_device.h  master.h
src/hd_controller_motors/include/xcontrol/: network_master.h  one_axis_slot.h
src/hd_controller_motors/msg/: HandlingControl.msg
src/hd_controller_motors/src/: hd_motors_driver.cpp  hd_node.cpp
src/video_stream_opencv/: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/video_stream_opencv/cfg/: VideoStream.cfg
src/video_stream_opencv/config/: test_calibration.yaml
src/video_stream_opencv/launch/: HD_camera.launch
src/video_stream_opencv/scripts/: test_video_resource.py
src/video_stream_opencv/src/: video_stream.cpp  video_stream_node.cpp
src/video_stream_opencv/test/: mjpg_server.py  test_mjpg_stream.test  test_rtsp_stream.test  test_video_file.test
src/xplore_msg/: CMakeLists.txt  package.xml
(+12 files in other folders)
